# minifi-cpp

./: ARCHITECTURE.md  README.md  validate_mermaid.py
cmake/: Jsoncons.cmake  MiNiFiOptions.cmake
extensions/cognitive-core/: CMakeLists.txt
extensions/cognitive-core/processors/: CognitiveEchoProcessor.cpp  CognitiveEchoProcessor.h  HypergraphMapperProcessor.cpp  HypergraphMapperProcessor.h
extensions/cognitive-core/tests/: CMakeLists.txt  CognitiveKernelTests.cpp  HypergraphSubstrateTests.cpp
extensions/cognitive-core/utils/: CognitiveKernel.cpp  CognitiveKernel.h  HypergraphSubstrate.cpp  HypergraphSubstrate.h
